--- a/src/main/webapp/app/entities/projects/projects-update.html
+++ b/src/main/webapp/app/entities/projects/projects-update.html
@@ -340,9 +340,9 @@
     <div id="runOfShow" ng-show="vm.projectsDTO.projects.runOfShowFlag">
 
         <h4>
-            Run of Show Purchase Orders &nbsp; &nbsp; <a
+            <strong>Run of Show Purchase Orders</strong> &nbsp; &nbsp; <a
             ng-click="vm.runShowAdd()"><span
-            class=" glyphicon glyphicon-plus-sign small text-primary "></span></a>
+            class=" glyphicon glyphicon-plus-sign text-success "></span></a>
         </h4>
 
         <div ng-repeat="po in vm.projectsDTO.projectPurchaseOrderses">
@@ -361,7 +361,7 @@
                 </div>
 
                 <div class="col-lg-1">
-					<span class="glyphicon glyphicon-trash text-danger small"
+					<span class="glyphicon glyphicon-remove-circle text-danger small"
                           ng-click="vm.runShowRemove($index)"></span>
                 </div>
             </div>
@@ -426,8 +426,8 @@
         </div>
 
         <h4>
-            Lab Tasks &nbsp; &nbsp; <a href="" ng-click="vm.addlab()"><span
-            class=" glyphicon glyphicon-plus-sign small text-primary "></span></a>
+            <strong>Lab Tasks</strong> &nbsp; &nbsp; <a href="" ng-click="vm.addlab()"><span
+            class=" glyphicon glyphicon-plus-sign text-success"></span></a>
         </h4>
         <div id="labs">
 
@@ -450,7 +450,7 @@
                             </div>
                             <div class="col-lg-1">
                                 <a href="" ng-click="vm.removelab($index)"><span
-                                    class=" glyphicon glyphicon-trash text-danger"></span></a>
+                                    class=" glyphicon glyphicon-remove-circle text-danger"></span></a>
                             </div>
 
                         </div>
@@ -1023,8 +1023,8 @@
     <div class="row">
         <div class="col-sm-3">
             <h5>
-                TALENTS <a href="" ng-click="vm.addTalent()"><span
-                class=" glyphicon glyphicon-plus-sign text-danger small"></span></a>
+                <strong>TALENTS</strong> <a href="" ng-click="vm.addTalent()"><span
+                class=" glyphicon glyphicon-plus-sign text-success"></span></a>
             </h5>
         </div>
         <div class="pull-right">
@@ -1123,7 +1123,7 @@
                 <a href="" ng-click="vm.sendIndividualMail(tags)"><span
                     class=" glyphicon glyphicon-envelope small text-success"></span></a> |
                 <a href="" ng-click="vm.removeTalent(tags.id)"><span
-                    class=" glyphicon glyphicon-trash small text-danger"></span></a></td>
+                    class=" glyphicon glyphicon-remove-circle small text-danger"></span></a></td>
         </tr>
     </table>
     <div class="row">
@@ -1141,8 +1141,8 @@
     <div class="row">
         <div class="col-sm-3">
             <h5>
-                EXECS <a href="" ng-click="vm.addExec()"><span
-                class=" glyphicon glyphicon-plus-sign text-danger small"></span></a>
+                <strong>EXECS</strong> <a href="" ng-click="vm.addExec()"><span
+                class=" glyphicon glyphicon-plus-sign text-success"></span></a>
             </h5>
         </div>
         <div class="pull-right">
@@ -1227,11 +1227,22 @@
                 <a href="" ng-click="vm.sendIndividualMail(execs)"><span
                     class=" glyphicon glyphicon-envelope small text-success"></span></a> |
                 <a href="" ng-click="vm.removeExec(execs.id)"><span
-                    class=" glyphicon glyphicon-trash small text-danger"></span></a></td>
+                    class=" glyphicon glyphicon-remove-circle small text-danger"></span></a></td>
         </tr>
-
+        <div id="bottom"></div>
     </table>
-    <DIV id="bottom"></div>
+
+    <div class="row">
+
+        <label class="col-md-1 control-label small">Additional</label>
+        <div class="col-xs-11">
+            <textarea rows="1" class="form-control input-sm"
+                      ng-model="vm.projectsDTO.projects.legacyNameNotes"></textarea>
+
+        </div>
+
+    </div>
+
 
     <hr>
     EXPANDED TALENT INFORMATION
