--- a/src/main/webapp/app/entities/work-order/work-order-detail.html
+++ b/src/main/webapp/app/entities/work-order/work-order-detail.html
@@ -1,13 +1,13 @@
 <div print-section>
     <div print-remove>
-        <div class="row pull-right">
+        <div class="row pull-left">
             <button type="submit" class="btn btn-xs btn btn-primary"
                     ui-sref="work-order.edit({id:vm.workOrderDTO.workOrder.id})">
                 Edit
             </button>
 
             <button print-btn class="btn btn-xs btn btn-primary">Print</button>
-            <button type="button" class="btn btn-xs btn btn-primary" onclick="window.print()">Print Window</button>
+            <!--<button type="button" class="btn btn-xs btn btn-primary" onclick="window.print()">Print Window</button>-->
             <button type="button" onclick="window.history.back()"
                     class="btn btn-xs btn btn-danger">Cancel
             </button>
