--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -284,6 +284,7 @@ Latest compiled and minified JavaScript
 	<script src="app/entities/projects/mails-individual.controller.js"></script>
 
 	<script src="app/entities/projects/individual-privilege.controller.js"></script>
+	<script src="app/entities/projects/individual-album.controller.js"></script>
 	<script src="app/entities/projects/projects.state.js"></script>
 	<script src="app/entities/projects/projects.service.js"></script>
 	<script src="app/entities/projects/projects.search.service.js"></script>
