--- a/src/main/webapp/app/entities/project-roles/project-roles-dialog.html
+++ b/src/main/webapp/app/entities/project-roles/project-roles-dialog.html
@@ -381,12 +381,8 @@
     </div>
 
     <div class="modal-footer">
-        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal" ng-click="vm.clear()">
-            <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;Cancel
-        </button>
-        <button type="submit"  class="btn btn-primary btn-sm">
-            <span class="glyphicon glyphicon-save"></span>&nbsp;Save
-        </button>
+        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal" ng-click="vm.clear()">Cancel</button>
+        <button type="submit"  class="btn btn-primary btn-sm">Save</button>
     </div>
 
 </form>
