--- a/src/main/webapp/app/entities/projects/update-tags.html
+++ b/src/main/webapp/app/entities/projects/update-tags.html
@@ -17,7 +17,7 @@
             <th class="small">Hotkey</th>
         </tr>
 
-        <tr ng-repeat="tags in vm.tagss.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage)) | orderBy : 'type'">
+        <tr ng-repeat="tags in vm.tagss.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage)) | orderBy : 'value'">
             <td class="small">
                 <button class="btn btn-primary btn-xs" type="button"
                         ng-click="vm.editTags(tags.id)">Select</button>
